# PAGAF-Project

./: README.md
PAGAF_Bevy_Game/: .gitignore  Cargo.toml  deploy.sh  index.html  readme.md
PAGAF_Bevy_Game/assets/models/tiles-with-ai-textures/commercial/: commercialBasicWindowedWall.glb  commercialBasicWindowedWall2.glb
PAGAF_Bevy_Game/assets/models/tiles-with-ai-textures/industrial/: industrialBasicFloorBigDoor.glb
PAGAF_Bevy_Game/assets/models/tiles-with-ai-textures/parc/: parcFloorLeefFlour.glb  parcFloorTree.glb
PAGAF_Bevy_Game/assets/models/tiles-with-ai-textures/residential/: residentialBasicFloor.glb  residentialBasicRoof.glb
PAGAF_Bevy_Game/assets/models/tiles/tile_4/: tile.glb
PAGAF_Bevy_Game/assets/models/tiles/tile_5/: tile.glb
PAGAF_Bevy_Game/src/: AppConfig.rs  app_config.rs  game.rs  ingame_ui.rs  main.rs  particle_fx.rs  tile_loader.rs  tilemap.rs  ui.rs  undo_redo.rs  wfc.rs
boidsdemo/: birb_boid.tscn  boids_manager.gd  icon.svg.import  main.tscn  project.godot  simple_boid.gd
boidsdemo/textures/: birb.PNG.import
docs/: PAGAF_Bevy_Game.d.ts  PAGAF_Bevy_Game.js  PAGAF_Bevy_Game_bg.wasm.d.ts  index.html
docs/assets/models/tiles-with-ai-textures/commercial/: commercialBasicFloorWindowedWall.glb  commercialBasicFloorWindowedWall2.glb  commercialBasicFloorWindowedWall3.glb  commercialBasicWindowedWall3.glb
docs/assets/models/tiles-with-ai-textures/industrial/: industrialBasicFloorBigHalfDoor.glb
docs/assets/models/tiles-with-ai-textures/residential/: residentialBasicFloorDoor.glb  residentialBasicFloorLight.glb  residentialBasicFloorSlidingDoor.glb  residentialBasicFloorWall1.glb  residentialBasicFloorWall2.glb  residentialBasicFloorWall3.glb  residentialBasicFloorWallDoor.glb  residentialBasicFloorWallDoorA.glb  residentialBasicFloorWallDoorB.glb  residentialBasicWall1.glb  residentialBasicWall2.glb  residentialBasicWall3.glb
docs/assets/models/tiles-with-ai-textures/road/: roadBasic.glb  roadBasicFloorFence.glb
docs/assets/models/tiles/residential/: residential_1.glb
(+1 files in other folders)
