[package]
name = "PAGAF_Bevy_Game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features=["jpeg"] }
bevy_egui = "0.34.1"
rand = { version = "0.9.1", features = ["std_rng", "std"] }
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_hanabi = { version = "0.16", features = ["3d", "serde"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
bevy_hanabi = { version = "0.16", default-features = false, features = ["3d"] }